<resources>
    <string name="app_name">NewVishalDairy</string>
    <string name="my_name">My Name</string>
    <string name="place">Place</string>
    <string name="close">Close</string>
    <string name="my_orders">My Orders</string>
    <string name="order_calender">Order Calendar</string>
    <string name="my_wallet">My Wallet</string>
    <string name="updating">Updating . . .</string>
    <string name="my_cart">My Cart</string>
    <string name="my_subscriptions">My Subscriptions</string>
    <string name="vacation">Vacation</string>
    <string name="support"><![CDATA[Help & Support]]></string>
    <string name="logout">Logout</string>
    <string name="may_i_help_you">May I Help You?</string>
    <string name="search_here_for_your_needs">Search here for your Needs</string>
    <string name="plan">Plan</string>
    <string name="monthly">Monthly</string>
    <string name="last_order">Last Order</string>
    <string name="_20_april_2020">20 April 2020</string>
    <string name="days_left">Days Left</string>
    <string name="_10_days">10 Days</string>
    <string name="swipe_to_add_items">Swipe to add Items</string>
    <string name="featured">Featured</string>
    <string name="today_s_offer">Today\'s Offer</string>
    <string name="daily_deals">Daily Deals</string>
    <string name="check_now">Check Now</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="currently_no_products">Currently, no products</string>
    <string name="currently_no_categories">Currently, no categories</string>
    <string name="some_error_please_try_again_later">Some error, Please try again later</string>
    <string name="other_food_items">Other Food Items</string>
    <string name="dairy_products">Dairy Products</string>
    <string name="product">Product</string>
    <string name="add_button_first_image">Add Button First Image</string>
    <string name="add">Add</string>
    <string name="add_button_second_image">Add Button Second Image</string>
    <string name="subscribe">Subscribe</string>
    <string name="price">Price</string>
    <string name="sample_price">₹ 28.00</string>
    <string name="sample_sale_price">₹ 28.00</string>
    <string name="in_stock">In Stock</string>
    <string name="_3_items">3 Items</string>
    <string name="back">Back</string>
    <string name="search_for_all_groceries_here">Search for all groceries here</string>
    <string name="your_one_stop_for_daily_essential_brands">Your one stop for daily essential brands</string>
    <string name="loading_products">Loading Products</string>
    <string name="wallet">Wallet</string>
    <string name="add_subscription">Add Subscription</string>
    <string name="quantity_per_day">Quantity per day</string>
    <string name="decrease_product_quantity">Decrease Product Quantity</string>
    <string name="increase_product_quantity">Increase Product Quantity</string>
    <string name="please_select_days">Please Select Days</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="recharge_after">Recharge After</string>
    <string name="sample_deliveries">30 Deliveries</string>
    <string name="start_date">Start Date</string>
    <string name="sample_start_date">Wed, 24 Jun</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="deliver_once">Deliver Once</string>
    <string name="_1">1</string>
    <string name="my_profile">My Profile</string>
    <string name="name_here">Name Here</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="sample_subscriptions">12</string>
    <string name="sample_balance">2000</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="change_password">Change Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sample_mobile_no">+919876543210</string>
    <string name="email_id">Email Id</string>
    <string name="sample_email_id">abc@gmail.com</string>
    <string name="my_address">My Address</string>
    <string name="sample_address">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="edit">Edit</string>
    <string name="sample_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="my_detail">My Detail</string>
    <string name="all">ALL</string>
    <string name="processing">PROCESSING</string>
    <string name="Completed">COMPLETED</string>
    <string name="Cancelled">CANCELLED</string>
    <string name="no_orders_placed">No Orders Placed</string>
    <string name="order_no">Order No:</string>
    <string name="sample_order_date">2020–08–16 12:12:10</string>
    <string name="sample_order_no">1523</string>
    <string name="products">Products:</string>
    <string name="sample_products">5</string>
    <string name="details">Details</string>
    <string name="total_amount">Total Amount:</string>
    <string name="sample_total_amount">₹ 520</string>
    <string name="order_details">Order Details</string>
    <string name="review_order">Review Order</string>
    <string name="order_again">Order Again</string>
    <string name="shipping_address">Shipping Address:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="sample_payment_method">Cash On Delivery</string>
    <string name="sample_discount">10% Discount, Personal Promo Code</string>
    <string name="discount">Discount:</string>
    <string name="quantity">Quantity:</string>
    <string name="sample_quantity">5</string>
    <string name="sample_wallet_balance">₹ 1000</string>
    <string name="view_all_transactions">View All Transactions</string>
    <string name="add_money_to_my_wallet">Add Money to My Wallet</string>
    <string name="we_suggest_an_average_balance_of_u20b9_1000">We suggest an average balance of ₹ 1000</string>
    <string name="enter_amount_you_want_to_add">Enter amount you want to add</string>
    <string name="u20b9_500">₹ 500</string>
    <string name="u20b9_1000">₹ 1000</string>
    <string name="u20b9_2000">₹ 2000</string>
    <string name="add_money">Add Money</string>
    <string name="all_transactions">All Transactions</string>
    <string name="my_credits">My Credits</string>
    <string name="no_transactions_image">No Transactions Yet</string>
    <string name="there_are_currently_no_transactions_available">There are currently no transactions available</string>
    <string name="no_payment_methods">No Payment Methods</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="sample_payment_details">Phone Number | Email Id</string>
    <string name="card">Card</string>
    <string name="visa_mastercard_rupay_and_more">Visa, Mastercard, Rupay and more</string>
    <string name="payment_methods">Payment Methods:</string>
    <string name="go_back">Go Back</string>
    <string name="money_added">Money Added</string>
    <string name="sample_date">23</string>
    <string name="sample_month">Jun</string>
    <string name="sample_day">Tuesday</string>
    <string name="estimated_delivery_date">Estimated Delivery Date</string>
    <string name="arriving_by_7_am">Arriving by 7 am</string>
    <string name="delivery">Delivery Time</string>
    <string name="make_your_deliveries_automatic">Make your deliveries automatic</string>
    <string name="subscribe_text">Subscribe</string>
    <string name="payment">Payment</string>
    <string name="various_payment_methods_are_available">Various payment methods are available</string>
    <string name="cart_amount">Cart Amount:</string>
    <string name="service_fee">Service Fee:</string>
    <string name="sample_service_fee">₹ 12</string>
    <string name="total_price">Total Price:</string>
    <string name="select_address">Select Address</string>
    <string name="coupon_discount">Coupon Discount:</string>
    <string name="proceed_to_order">Proceed to Order</string>
    <string name="sample_total_price">₹ 532</string>
    <string name="sample_coupon_discount">₹ 0</string>
    <string name="remove">Remove</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="_3_newbridge_court">3 NewBridge Court</string>
    <string name="chino_hills_ca_91709_united_states">Chino HIlls, CA 1709, United States</string>
    <string name="use_as_the_shipping_address">Use as the Shipping Address</string>
    <string name="select_shipping_address">Select Shipping Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="full_name">Full Name</string>
    <string name="house_no">House No</string>
    <string name="city">City</string>
    <string name="state_region">State/Region</string>
    <string name="pin_code">Pin Code</string>
    <string name="country">Country</string>
    <string name="save_changes">Save Changes</string>
    <string name="add_address">Add Address</string>
    <string name="scheduled_orders">Scheduled Orders</string>
    <string name="sample_span">05 May 2020 to 05 June 2020</string>
    <string name="sample_delivery_time">Delivery time 09:15 am</string>
    <string name="status">Status</string>
    <string name="set_vacation">Set Vacation</string>
    <string name="create_vacation">Create Vacation</string>
    <string name="vacation_image">Vacation Image</string>
    <string name="select_vacation_dates">Select Vacation Dates</string>
    <string name="end_date">End Date</string>
    <string name="sample_end_date">Wed, 23 Jul</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="major_topics">Major Topics</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="legal_terms_amp_conditions">Legal Terms &amp; Conditions</string>
    <string name="need_help_with_anything">Needs help with anything</string>
    <string name="email_us">Email Us</string>
    <string name="sample_faq">How does the subscription Work?</string>
    <string name="sample_faq_answer">Its simple. You choose your favorite brand, quantity and frequency. You make a payment for at least 3 deliveries (trial) or a full month (30 deliveries), Sit back and enjoy products delivered right to your doorstep every morning.</string>
    <string name="daily">Daily</string>
    <string name="residency_type">Residency Type</string>
    <string name="apartment_or_gated_society">Apartment or Gated Society</string>
    <string name="individual_house">Individual House</string>
    <string name="apartment_society">Apartment/Society</string>
    <string name="tower_block">Tower/Block</string>
    <string name="flat_house_no">Flat/House No</string>
    <string name="landmark">Landmark</string>
    <string name="locality">Locality</string>
    <string name="full_name_">Full Name *</string>
    <string name="residency_type_">Recidency Type *</string>
    <string name="flat_house_no_">Flat/House No *</string>
    <string name="apartment_society_">Apartment/Society *</string>
    <string name="locality_">Locality *</string>
    <string name="city_">City *</string>
    <string name="login_page">Login Page</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="enter_your_phone_no">Enter your mobile number</string>
    <string name="phone_no_description">We will send OTP on this number.</string>
    <string name="sms_otp">Send OTP</string>
    <string name="otp_page">Otp Page</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="otp_description">"OTP has been sent to "</string>
    <string name="resend_text">"Resend OTP in "</string>
    <string name="continue_text">Continue</string>
</resources>