<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/background_efefef_color_fill_with_corners_10dp">

    <LinearLayout
        android:id="@+id/address_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit_button"
        app:layout_constraintBottom_toTopOf="@id/check_box">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jane_doe"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@android:color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/residency_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/individual_house"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/chino_hills_ca_91709_united_states"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/chino_hills_ca_91709_united_states"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/address_line_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/chino_hills_ca_91709_united_states"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/edit"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:paddingStart="0dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/check_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/address_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_as_the_shipping_address"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/address_layout"
        app:layout_constraintStart_toStartOf="@id/address_layout"
        app:layout_constraintEnd_toEndOf="@id/address_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>