<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.vishaldairy.viewModel.VMAuth" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/enter_otp_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/otp_page"
            android:scaleType="fitXY"
            android:src="@drawable/background_ffe5b0"
            app:layout_constraintBottom_toTopOf="@id/otp_layout"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/otp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_otp_image">

            <LinearLayout
                android:id="@+id/details_heading_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/back"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:src="@drawable/icon_arrow_left"
                    app:tint="@android:color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_otp"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/otp_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="phone"
                android:background="@drawable/background_white_fill_with_c3c3c3_color_stroke_1dp_with_corners_10dp"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/enter_your_otp"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:paddingStart="20dp"
                android:paddingTop="14dp"
                android:paddingEnd="20dp"
                android:paddingBottom="14dp"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/otp_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/otp_description"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/resend_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resend_time"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/resend_text"
                    android:textAlignment="textEnd"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/otp_description"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/continue_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/background_d4d4d4_color_fill_with_corners_10dp"
                    android:enabled="false"
                    android:gravity="center_horizontal"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/continue_text"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/pb_otp"
                    android:visibility="gone"
                    android:indeterminateTint="@color/white"
                    android:layout_centerInParent="true"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"/>


            </RelativeLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>