<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.vishaldairy.viewModel.VMAuth" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/enter_phone_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/background_fbffcb"
            android:scaleType="fitXY"
            android:contentDescription="@string/login_page"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_linear_layout" />

        <LinearLayout
            android:id="@+id/login_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/enter_phone_image"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/details_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_to_continue"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white_fill_with_c3c3c3_color_stroke_1dp_with_corners_10dp"
                android:drawableEnd="@drawable/icon_phone"
                android:drawablePadding="20dp"
                android:ems="10"
                android:inputType="phone"
                android:maxLength="16"
                android:digits="1234567890"
                android:hint="@string/enter_your_phone_no"
                android:textSize="16sp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="phone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/phone_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_no_description"
                android:textSize="13sp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp" />

            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/send_otp_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_d4d4d4_color_fill_with_corners_10dp"
                    android:text="@string/sms_otp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:enabled="false"
                    android:gravity="center"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />

                <ProgressBar
                    android:id="@+id/pb_mobile"
                    android:visibility="gone"
                    android:indeterminateTint="@color/white"
                    android:layout_centerInParent="true"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"/>

            </RelativeLayout>



        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>